
Directory libperl/Asim/lib/Asim/Repository
 DB.pm                     Locally Modified           82 

Directory tools/scripts
 asim-shell                Locally Modified           82 

Directory .
 Makefile.am               Locally Modified           82 

Directory etc
 repositories.d/           Locally Added               0 

Directory etc/repositories.d
 README                    Locally Added               0 

Updating with simcore changes (rev. 2292-2294: Joel Emer)

The commit adds support for finding repository .pack files from a
list of places rather than an single file asim.pack. This packfile
path can contain either individual .pack files or directories, in
which case all of the files (matching the pattern *.pack) will be
used. 

The default packfile path is 
$HOME/.asim/repositories.d
$HOME/.asim/asim.pack
<install-dir>/etc/asim/repositories.d
<install-dir>/etc/asim/asim.pack

That list can be overridden in asim-shell on the command line with
the --repositoryDB switch.

A later phase of this process will involve populating the repositories.d
directory.

Joel

Fixed Makefile bug.

----------
jsemer      Date: Wed Apr  4 15:37:33 EDT 2007  CSN: CSN-asimcore-84
                  Wed Apr  4 19:37:33 UTC 2007


Directory libperl/Asim/lib/Asim/Repository
 DB.pm                     Locally Modified           83 

Updating with simcore changes (rev 2306 - jsemer)

Look for repository information in <install-dir>/etc/asim/repositories.d/

Joel

----------
spartha1    Date: Fri Apr 27 19:23:24 EDT 2007  CSN: CSN-asimcore-85
                  Fri Apr 27 23:23:24 UTC 2007


Directory libperl/Asim/lib/Asim/Stats
 ToText.pm                 Locally Modified           84 

Directory tools/scripts
 stat-to-text              Locally Modified           84 

Updating with simcore changes (rev. 2304 - Carl Beckmann)

- The input file argument to stat-to-text can now be omitted
to use STDIN instead, in order to use this as a filter
(e.g. "zcat foo.stats.gz | stat-to-text")